Fix overflow style

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,6 @@ body {
 	font-size: 16px;
 	line-height: 1.4;
 	min-height: 100vh;
-	overflow-y: hidden;
 	color: $color-neutral-1000;
 	background-color: $color-neutral-500;
 }
